--- a/src/styles/Header/SearchBar.css
+++ b/src/styles/Header/SearchBar.css
@@ -13,12 +13,13 @@
 }
 
 .search-input-box {
+  font-family: 'Euphemia UCAS';
+  font-style: normal;
   flex-grow: 5;
   align-self: start;
   width: 100%;
-  height: 12.25rem;
+  height: 14rem;
   display: flex;
-  padding-top: 25px;
   /* margin-bottom: -62px;
     margin-top: -25px; */
 }
@@ -29,8 +30,7 @@ input:focus {
   outline: none;
   border-color: transparent;
   background-color: transparent;
-  font-family: 'Euphemia UCAS';
-  font-style: normal;
+  padding-top: 30px;
   font-weight: 400;
   font-size: 170px;
   line-height: 348px;
@@ -39,12 +39,12 @@ input:focus {
 }
 
 input::placeholder {
-  margin-top: 10px;
+  padding-top: 25px;
   color: inherit;
   font-size: inherit;
   font-size: 228px;
+  opacity: 60%;
 }
-
 .search-bar-wrapper .mini-search-title {
   font-family: 'Fredoka';
   font-style: normal;
