--- a/src/styles/Header/SearchBar.css
+++ b/src/styles/Header/SearchBar.css
@@ -2,62 +2,67 @@
   background: rgba(203, 197, 243, 0.55);
   position: absolute;
   width: 100%;
-  /* opacity: 80%; */
+  opacity: 80%;
 }
 
 .search-bar-wrapper {
   height: 50%;
   display: flex;
   flex-direction: column;
-  margin-left: 6rem;
+  overflow: hidden;
 }
 
 .search-input-box {
+  position: relative;
   font-family: 'Euphemia UCAS';
   font-style: normal;
   flex-grow: 5;
   align-self: start;
-  width: 100%;
-  height: 14rem;
-  display: flex;
-  /* margin-bottom: -62px;
-    margin-top: -25px; */
 }
 
 .search-bar-wrapper .search-input-box input,
 input:focus {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   outline: none;
   border-color: transparent;
   background-color: transparent;
-  padding-top: 30px;
-  font-weight: 400;
-  font-size: 170px;
-  line-height: 348px;
-
+  padding-left: 5vw;
+  font-weight: 400px;
+  font-size: clamp(7rem, 20vw, 12rem);
   color: #6851C4;
+  z-index: 2;
+  cursor: text;
 }
 
-input::placeholder {
-  padding-top: 25px;
-  color: inherit;
-  font-size: inherit;
-  font-size: 228px;
-  opacity: 60%;
+label.placeholder {
+  font-family: 'Euphemia UCAS';
+  left: 5%;
+  top: -15%;
+  color: #6851C4;
+  opacity: 75%;
+  font-size: clamp(7.5rem, 25vw, 18.5rem);
+  text-align: start;
+  text-overflow: clip;
+  position: absolute;
+  z-index: 1;
+}
+label.placeholder.hidden{
+  opacity: 0;
 }
 .search-bar-wrapper .mini-search-title {
+  padding-left: 5vw;
   font-family: 'Fredoka';
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
-  line-height: 44px;
   color: #332B48;
   align-self: start;
-  opacity: 1;
-  transition: opacity 150ms ease-in-out;
-  height: fit-content;
-  margin-left: 10px;
-  margin-top: 30px
+  transition: opacity 350ms ease-in-out;
+  margin-left: 1rem;
+  margin-top: 2rem;
 }
 
 .search-bar-wrapper .mini-search-title.hidden {
