--- a/src/styles/Header/FilterBar.css
+++ b/src/styles/Header/FilterBar.css
@@ -1,5 +1,33 @@
 .filter-bar-container {
-    display: flex;
     background-color: white;
+    border: 2px solid rgba(71, 157, 69, 0.5);
     width: 100%;
+    height: 8vh;
+    position: relative;
+    top: 32vh;
+}
+
+.filter-bar-wrapper {
+    font-family: 'Fredoka';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
+
+    color: #000000;
+
+    padding-left: 5vw;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.filter-header {
+    flex: initial;
+}
+
+.filter-tag {
+    margin-left: 3vh;
+    margin-right: 15vh;
+    color: #C5C2D2;
 }
