--- a/src/styles/Header/FilterBar.css
+++ b/src/styles/Header/FilterBar.css
@@ -1,9 +1,9 @@
 .filter-bar-container {
     background-color: white;
     border: 2px solid rgba(71, 157, 69, 0.5);
-    width: 100%;
+    /* width: 100%; */
     height: 8vh;
-    position: relative;
+    /* position: relative; */
     top: 32vh;
 }
 
