--- a/src/styles/Body/Footer.css
+++ b/src/styles/Body/Footer.css
@@ -6,8 +6,9 @@
    display: flex;
    flex-direction: row;
    padding: 0.1vw 6vw;
-   background-color: #332B48;
+   background-color: hsl(257, 25%, 23%);
    align-items: center;
+   z-index: 5;
  }
 
  .footer-link {
