--- a/src/styles/Header/SearchBar.css
+++ b/src/styles/Header/SearchBar.css
@@ -19,6 +19,7 @@
   font-style: normal;
   flex-grow: 5;
   align-self: start;
+  padding-bottom: 13px;
 }
 
 .search-bar-wrapper .search-input-box input,
