--- a/src/styles/Body/ProjectCard.css
+++ b/src/styles/Body/ProjectCard.css
@@ -1,11 +1,17 @@
+@font-face {
+  font-family: Euphemia;
+  src: url(../../EuphemiaUCAS.ttf);
+}
+
 .project-card {
   width: 21.5%;
   padding: 0px;
-  margin-top: 24px;
+  margin-top: 30px;
   margin-bottom: 0px;
   margin-right: 0.25%;
   margin-left: 0.25%;
   position: relative;
+  font-family: Euphemia;
 }
 
 .project-card.unfocused {
