--- a/src/styles/Header/FilterBar.css
+++ b/src/styles/Header/FilterBar.css
@@ -1,22 +1,27 @@
+@font-face {
+  font-family: Euphemia;
+  src: url(../../EuphemiaUCAS.ttf);
+}
+
+
 .filter-bar-container {
   background-color: #332B48;
   border: 2px solid #503AA78C;
   /* width: 100%; */
-  height: 8vh;
   /* position: relative; */
-  margin-bottom: -15px;
+  margin-bottom: -20px;
 }
 
 .filter-bar-wrapper {
-  font-family: 'Fredoka';
+  font-family: Euphemia;
   font-style: normal;
   font-weight: 400;
   font-size: 21px;
-  line-height: 25px;
   color: #000000;
   padding-left: 5vw;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .filter-header {
@@ -28,7 +33,11 @@
   width: 10vh;
   height: 8vh;
   margin-left: 3vh;
-  margin-right: 15vh;
+  margin-right: 10px;
+  font-family: Euphemia;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
   color: #B2ADC8;
   background-color: initial;
   transition: background-color 150ms ease-in-out;
